# movie_comment

./: pyproject.toml
actor/: models.py  tmdb_actor_utils.py  urls.py  views.py
actor/migrations/: 0001_initial.py
movie/: models.py  tmdb_utils.py  urls.py  views.py
movie/migrations/: 0001_initial.py
work/: settings.py  urls.py
