[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["gleb <glebok1235@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
psycopg2 = "^2.8.5"
requests = "^2.23.0"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
black = {version = "^19.10b0", allow-prereleases = true}
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
